fixed styling bugs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
       </section>
       <section style="text-align: center; padding: 2rem 0">
-        <h1 style="font-weight: 400; font-size: 2rem">Open a Zerodha account</h1>
+        <h1 class="open-account-title">Open a Zerodha account</h1>
         <p style="padding: 1rem 0; color: #777">Modern platforms and apps, ₹0 investments, and flat ₹20 intraday and F&O trades.</p>
         <button class="btnSignup" style="margin:2rem 0;">Sign up now</button>
       </section>
