--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Zerodha - Online stock trading at lowest prices from India's biggest stock
-      broker – Zerodha
+      broker &ndash; Zerodha
     </title>
     <meta
       name="description"
@@ -89,7 +89,7 @@
             </h4>
             <ul class="features-list showoff-subtitle">
               <li>Futures and Options</li>
-              <li>Stocks & IPOs</li>
+              <li>Stocks &amp; IPOs</li>
               <li>Commodity derivatives</li>
               <li>Direct mutual funds</li>
               <li>Currency derivatives</li>
@@ -162,17 +162,17 @@
           </p>
           <a href="#">Varsity</a>
           <p class="education-description">
-            TradingQ&A, the most active trading and investment community in
+            TradingQ&amp;A, the most active trading and investment community in
             India for all your market related queries.
           </p>
-          <a href="#">Trading Q&A</a>
+          <a href="#">Trading Q&amp;A</a>
         </div>
       </section>
       <section style="text-align: center; padding: 2rem 0">
         <h2 class="open-account-title">Open a Zerodha account</h2>
         <p style="padding: 1rem 0; color: #777">
           Modern platforms and apps, ₹0 investments, and flat ₹20 intraday and
-          F&O trades.
+          F&amp;O trades.
         </p>
         <button class="btnSignup" style="margin: 2rem 0">Sign up now</button>
       </section>
@@ -208,7 +208,7 @@
             <li>Referral programme</li>
             <li>Careers</li>
             <li>Zerodha.tech</li>
-            <li>Press & Media</li>
+            <li>Press &amp; Media</li>
             <li>Zerodha cares (CSR)</li>
           </ul>
         </div>
@@ -219,7 +219,7 @@
             <li>Support portal</li>
             <li>Z-connect blog</li>
             <li>List of charges</li>
-            <li>Downloads & resources</li>
+            <li>Downloads &amp; resources</li>
             <li>Videos</li>
             <li>How to file a complaint?</li>
             <li>Status of your complaints</li>
@@ -237,14 +237,14 @@
       <div class="smallprint">
         <p>
           Zerodha Broking Ltd.: Member of NSE, BSE&ZeroWidthSpace;
-          &amp;&ZeroWidthSpace; MCX – SEBI Registration no.: INZ000031633
-          CDSL/NSDL: Depository services through Zerodha Broking Ltd. – SEBI
-          Registration no.: IN-DP-431-2019 Commodity Trading through Zerodha
-          Commodities Pvt. Ltd. MCX: 46025 – SEBI Registration no.: INZ000038238
-          Registered Address: Zerodha Broking Ltd., #153/154, 4th Cross, Dollars
-          Colony, Opp. Clarence Public School, J.P Nagar 4th Phase, Bengaluru -
-          560078, Karnataka, India. For any complaints pertaining to securities
-          broking please write to
+          &amp;&ZeroWidthSpace; MCX &ndash; SEBI Registration no.: INZ000031633
+          CDSL/NSDL: Depository services through Zerodha Broking Ltd. &ndash;
+          SEBI Registration no.: IN-DP-431-2019 Commodity Trading through
+          Zerodha Commodities Pvt. Ltd. MCX: 46025 &ndash; SEBI Registration
+          no.: INZ000038238 Registered Address: Zerodha Broking Ltd., #153/154,
+          4th Cross, Dollars Colony, Opp. Clarence Public School, J.P Nagar 4th
+          Phase, Bengaluru - 560078, Karnataka, India. For any complaints
+          pertaining to securities broking please write to
           <a href="mailto:complaints@zerodha.com">complaints@zerodha.com</a>,
           for DP related to <a href="mailto:dp@zerodha.com">dp@zerodha.com</a>.
           Please ensure you carefully read the Risk Disclosure Document as
@@ -260,21 +260,21 @@
         </p>
         <p>
           <a href="https://smartodr.in/" target="_blank"
-            >Smart Online Dispute Resolution</a
-          >
+            >Smart Online Dispute Resolution
+          </a>
         </p>
         <p>
           Investments in securities market are subject to market risks; read all
           the related documents carefully before investing.
         </p>
         <p>
-          Attention investors: 1) Stock brokers can accept securities as margins
-          from clients only by way of pledge in the depository system w.e.f
-          September 01, 2020. 2) Update your e-mail and phone number with your
-          stock broker / depository participant and receive OTP directly from
-          depository on your e-mail and/or mobile number to create pledge. 3)
-          Check your securities / MF / bonds in the consolidated account
-          statement issued by NSDL/CDSL every month.
+          Attention investors: 1&rpar; Stock brokers can accept securities as
+          margins from clients only by way of pledge in the depository system
+          w.e.f September 01, 2020. 2&rpar; Update your e-mail and phone number
+          with your stock broker / depository participant and receive OTP
+          directly from depository on your e-mail and/or mobile number to create
+          pledge. 3&rpar; Check your securities / MF / bonds in the consolidated
+          account statement issued by NSDL/CDSL every month.
         </p>
         <p>
           "Prevent unauthorised transactions in your account. Update your mobile
